Build on Mac with the dummy media stack
This is a temporary fix for broken GStreamer homebrew packages.

Fixes 29653.

--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -77,7 +77,7 @@ jobs:
           export OPENSSL_LIB_DIR="$(brew --prefix openssl)/lib"
           export PKG_CONFIG_PATH="$(brew --prefix libffi)/lib/pkgconfig/"
           export PKG_CONFIG_PATH="$(brew --prefix zlib)/lib/pkgconfig/:$PKG_CONFIG_PATH"
-          python3 ./mach build --release --with-${{ env.LAYOUT }}
+          python3 ./mach build --release --media-stack=dummy --with-${{ env.LAYOUT }}
       - name: Smoketest
         run: python3 ./mach smoketest
       - name: Unit tests
